# dagdemo

./: .gitignore  README.md  WINDOWS.md  WORKSHOP.md  pyproject.toml
src/dagdemo/: __init__.py  legislation.py  llm_enrichment.py  sltrib.py
src/playground/: dagster_viz.py  uuid_playground.py
src/playground/__marimo__/session/: dagster_viz.py.json
