[project]
name = "dagdemo"
version = "0.1.0"
description = "Minimal Dagster demo for Python workshops — RSS feeds, legislative data, and LLM calls"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0,<3.0",
    "requests",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagdemo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.dagster]
module_name = "dagdemo"
